# humm-hc-data

./: .gitignore  .hc  Cargo.toml  build.sh  sandbox.sh  test.sh
dna/: dna.yaml  humm_hc_data.dna
happ/: happ.yaml  humm_hc_data.happ
src/: entry.rs  lib.rs  zome_call.rs
test-ui/: package-lock.json  package.json
test-ui/src/: index.js
webhapp/: humm_hc_data.webhapp  web-happ.yaml
