[package]
name = "humm_hc_data"
description = "HummHive data hApp"
version = "0.0.1"
authors = [ "HummHive" ]
license = "CAL-1.0"
homepage = "https://github.com/thedavidmeister/humm-hc-data"
documentation = "https://github.com/thedavidmeister/humm-hc-data"
keywords = [ "holochain", "holo", "hummhive" ]
categories = [ "cryptography", "holochain" ]
edition = "2018"

[lib]
name = "humm_hc_data"
crate-type = [ "cdylib", "rlib" ]
path = "src/lib.rs"

[dependencies]
hdk = { path = "../holochain/crates/hdk" }
# use whatever serde hdk gives us
serde = "*"
thiserror = "*"
mockall = "*"
serde_bytes = "0.11"

[dev-dependencies]
fixt = { path = "../holochain/crates/fixt" }
holochain_types = { path = "../holochain/crates/holochain_types" }

[features]
mock = ["hdk/mock", "hdk/test_utils"]