[package]
name = "humm_hc_data"
description = "HummHive data hApp"
version = "0.0.1"
authors = [ "HummHive" ]
license = "CAL-1.0"
homepage = "https://github.com/thedavidmeister/humm-hc-data"
documentation = "https://github.com/thedavidmeister/humm-hc-data"
keywords = [ "holochain", "holo", "hummhive" ]
categories = [ "cryptography", "holochain" ]
edition = "2018"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[lib]
name = "humm_hc_data"
crate-type = [ "cdylib", "rlib" ]
path = "src/lib.rs"

[dependencies]
hdk = "0.0.114"
serde = "1"
thiserror = "*"
mockall = "*"
serde_bytes = "0.11"

[dev-dependencies]
fixt = "*"
holochain_types = "*"
